samples/_failures_safe/1761648479_48e763_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bd110bf7.c: In function ‘main’:
./samples/SAFE/__tmp_bd110bf7.c:166:20: error: missing terminating " character
  166 |             printf("numbers[%d]^%.2f = undefined
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_bd110bf7.c:166:13: error: expected expression at end of input
  166 |             printf("numbers[%d]^%.2f = undefined
      |             ^~~~~~
./samples/SAFE/__tmp_bd110bf7.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bd110bf7.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bd110bf7.c:166:13: error: expected declaration or statement at end of input
